--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Start
       run: npm start
 
+    - run: ls
+
     - name: Commit documentation changes
       uses: EndBug/add-and-commit@master
       with:
