--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     - run: ls
 
     - name: Commit documentation changes
-      uses: EndBug/add-and-commit@master
+      uses: EndBug/add-and-commit@test
       with:
         commit_author_name: Federico Grandi
         commit_author_email: fgrandi30@gmail.com
