--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
 name: Add tag
 on:
   release:
-    types: [publish]
+    types: [published]
 
 jobs: 
   run:
     name: Tag
     runs-on: ubuntu-latest
     steps: 
-    - uses: 'EndBug/latest-tag@docker'
+    - uses: 
