--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,5 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
     - uses: 'EndBug/latest-tag@docker'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
