--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     name: Tag
     runs-on: ubuntu-latest
     steps: 
+    - uses: actions/checkout@master
+
     - uses: 'EndBug/latest-tag@docker'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
