--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,9 @@ jobs:
       with:
         node-version: 10.0.0
 
-    - run: npm start
+    - uses: ./action
       with:
         registry:
         - npm
         - url: 'https://github.com'
           token: '123456789'
-          
