--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: EndBug/version-check@debug
 
     - name: log
-      run: 'echo "${{ steps.check.outputs }}"'
+      run: 'echo "${{ steps.check.outputs.changed }}" "${{ steps.check.outputs.type }}"'
 
     - name: forced error
       run: exit 1
