--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       uses: EndBug/version-check@debug
 
     - name: log
-      if: ${{ steps.check.outputs == 'true' }}
+      if: steps.check.outputs.changed == 'true'
       run: 'echo "${{ steps.check.outputs.type }}"'
 
     - name: forced error
