--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: 'echo $VAR >> file.txt'
-      env:
-        VAR: 123
-    - run: 'cat file.txt'
+    - uses: actions/checkout@master
+
+    - name: Check if version has been updated # You can edit this
+      id: check # This will be the reference for getting the outputs
+      uses: EndBug/version-check@private-repos # You can choose the version/branch you prefer
+      with: # You can find more info about inputs below
+        diff-search: true
+        file-name: dir/package.json
+        # token: ${{ secrets.GITHUB_TOKEN }}
