--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,6 @@ jobs:
     - uses: actions/checkout@master
 
     - name: Check if version has been updated # You can edit this
-      id: check # This will be the reference for getting the outputs
-      uses: EndBug/version-check@v1.1.0 # You can choose the version/branch you prefer
+      uses: EndBug/short-tag@master # You can choose the version/branch you prefer
       with: # You can find more info about inputs below
-        diff-search: true
-        file-name: dir/package.json
         token: ${{ secrets.GITHUB_TOKEN }}
