--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,17 +2,33 @@ name: Test
 on: push
 
 jobs:
-  check:
+  first:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@master
 
-      - run: echo "123" > file.txt
+      - run: echo "123" > file1.txt
 
       - uses: EndBug/add-and-commit@dist
         with:
-          message: "Your commit message"
+          message: "First"
+          path: "."
+          pattern: "*.txt"
+          force: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  second:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@master
+
+      - run: echo "123" > file2.txt
+
+      - uses: EndBug/add-and-commit@dist
+        with:
+          message: "Second"
           path: "."
           pattern: "*.txt"
           force: true
