--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
         with:
           path: "./pathToRepo/"
 
+      - run: mkdir ./pathToRepo/
       - run: echo "123" > ./pathToRepo/file.txt
 
       - uses: EndBug/add-and-commit@cwd
