--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: EndBug/add-and-commit@dist
         with:
-          message: "Test"
+          message: "Test1"
           path: "."
           pattern: "*.txt"
           cwd: "./pathToRepo/"
@@ -24,6 +24,7 @@ jobs:
 
   test2:
     runs-on: ubuntu-latest
+    needs: test1
 
     steps:
       - uses: actions/checkout@v2
@@ -34,7 +35,7 @@ jobs:
 
       - uses: EndBug/add-and-commit@dist
         with:
-          message: "Test"
+          message: "Test2"
           path: "."
           pattern: "*.txt"
           cwd: "./pathToRepo/"
