--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
 
       - run: echo "123" > ./pathToRepo/file1.txt
 
-      - uses: EndBug/add-and-commit@dist
+      - uses: EndBug/add-and-commit@v2
         with:
           message: "Test1"
           path: "."
@@ -24,6 +24,7 @@ jobs:
 
   test2:
     runs-on: ubuntu-latest
+    needs: test1
 
     steps:
       - uses: actions/checkout@v2
@@ -32,7 +33,7 @@ jobs:
 
       - run: echo "123" > ./pathToRepo/file2.txt
 
-      - uses: EndBug/add-and-commit@dist
+      - uses: EndBug/add-and-commit@v2
         with:
           message: "Test2"
           path: "."
