--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,14 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Test step
+      - name: Check if version has been updated
+        id: check
+        uses: EndBug/version-check@v1.1.0
+
+      - name: Log when changed
+        if: steps.check.outputs.changed == 'true'
+        run: 'echo "Version change found! New version: ${{ steps.check.outputs.version }} (${{ steps.steps.check.outputs.type }})"'
+
+      - name: Log when unchanged
+        if: steps.check.outputs.changed != 'true'
+        run: 'echo "No version change :/"'
