--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Check if version has been updated
         id: check
         uses: EndBug/version-check@v1.1.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Log when changed
         if: steps.check.outputs.changed == 'true'
