--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - run: 'echo "${{ steps.check.outputs }}"'
+      - run: 'echo "$steps"'
 
       - name: Log when changed
         if: steps.check.outputs.changed == 'true'
