--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,33 +6,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
-      - run: echo "123" > ./file1.txt
+      - run: echo "123" > ./dir/file1.txt
 
-      - uses: EndBug/add-and-commit@v3
+      - uses: EndBug/add-and-commit@dist
         with:
           message: "Test1"
-          path: "."
-          pattern: "*.txt"
-          force: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  test2:
-    runs-on: ubuntu-latest
-    needs: test1
-
-    steps:
-      - uses: actions/checkout@v1
-
-
-      - run: echo "123" > ./file2.txt
-
-      - uses: EndBug/add-and-commit@v3
-        with:
-          message: "Test2"
-          path: "."
+          path: "dir"
           pattern: "*.txt"
           force: true
         env:
