--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
           path: "."
           pattern: "*.txt"
           force: false
-          find_args: '-path "./dir/*"'
+          find_args: '-not -path "*/dir/*"'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
