--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
 
       - run: echo "123" > ./dir/file1.txt
       - run: echo "123" > ./file2.txt
+      - run: ls
 
       - uses: EndBug/add-and-commit@dist
         with:
