--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,15 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo "123" > ./dir/file1.txt
-      - run: echo "123" > ./file2.txt
-
       - uses: EndBug/add-and-commit@dist
         with:
           message: "Test"
           path: "."
           pattern: "*.txt"
           force: false
-          # find_args: '. -name "*.txt"'
+          remove: dir
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
