--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           message: "Test"
           path: "."
-          pattern: "*.*"
+          pattern: "*.txt"
           force: false
           remove: dir -r
         env:
