--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,14 +8,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo "123" > file.txt
-
       - uses: EndBug/add-and-commit@dist
         with:
           message: "Test"
           path: "."
           pattern: "*.txt"
           force: false
-          remove: dir -r
+          remove: "*.txt"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
