--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: echo "abc" > file.txt
+      - run: echo "123" > file.txt
 
       - uses: EndBug/add-and-commit@dist
         with:
