--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - run: echo "123" > file1.txt
+
       - uses: EndBug/add-and-commit@dist
         with:
           message: "Test"
           path: "."
           pattern: "*.txt"
           force: false
-          remove: file2.txt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
