--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
       - name: Check if version has been updated
         id: check
-        uses: EndBug/version-check@dist
+        uses: EndBug/version-check@latest
         with:
           diff-search: true
           token: ${{ secrets.GITHUB_TOKEN }}
