--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          path: "./pathToRepo/"
 
       - uses: EndBug/add-and-commit@dist
         with:
