--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,17 @@ jobs:
         with:
           path: "./pathToRepo/"
 
+      - run: echo "123" >> ./pathToRepo/file.txt
+
+      - uses: EndBug/add-and-commit@dist
+        with:
+          message: "Test"
+          add: "*.txt"
+          remove: "*.none"
+          cwd: "./pathToRepo/"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - uses: EndBug/add-and-commit@dist
         with:
           message: "Test"
