--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          path: "./pathToRepo/"
 
-      - run: echo "123" >> ./pathToRepo/file.txt
+      - run: echo "123" >> file.txt
 
       - uses: EndBug/add-and-commit@dist
         with:
           message: "Test"
           add: "*.txt"
           remove: "*.none"
-          cwd: "./pathToRepo/"
+          force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -26,6 +24,6 @@ jobs:
           message: "Test"
           add: "*.none"
           remove: "*.txt"
-          cwd: "./pathToRepo/"
+          force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
