--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,7 @@
 name: Test
-on: push
+on:
+  release:
+    types: [published]
 
 jobs:
   check:
@@ -8,5 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Test step
-        run: echo abc
+      - uses: EndBug/latest-tag@master
