--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,5 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: EndBug/latest-tag@master
+        with:
+          description: This is an annotated tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
