--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: EndBug/latest-tag@master
         with:
-          description: This is an annotated tag
+          description: annotated to annotated
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
