--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
 
-      - run: node index.js
+      - run: npm start
         env:
           UBI_EMAIL: ${{ secrets.UBI_EMAIL }}
           UBI_PASSWORD: ${{ secrets.UBI_PASSWORD }}
