--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
 
+      - run: npm i dotenv
       - run: npm start
         env:
           UBI_EMAIL: ${{ secrets.UBI_EMAIL }}
