--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "custom": "node .github/../index.js",
+    "custom": "node scripts/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
