--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: EndBug/latest-tag@master
+        with:
+          description: test description
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
