--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: EndBug/latest-tag@master
         with:
+          description: test description
           tag-name: customname
 
         env:
