--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temp-action-test",
   "version": "1.2.7",
-  "description": "",
+  "description": "a",
   "main": "index.js",
   "scripts": {
     "start": "node index",
