--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
 
       - run: echo "123" >> file.txt
 
-      - uses: EndBug/add-and-commit@v4.0.1
+      - uses: RobinWijnant/add-and-commit@master
         with:
           message: "Test"
           add: "*.txt"
@@ -19,7 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: EndBug/add-and-commit@v4.0.1
+      - uses: RobinWijnant/add-and-commit@master
         with:
           message: "Test"
           add: "*.none"
