edit from workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - run: echo "123" >> file.txt
+
       - uses: RobinWijnant/add-and-commit@master
         with:
           message: "Test"
