--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "temp-action-test",
   "version": "2.0.0",
-  "description": "a",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index",
