test: file path - none expected

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           diff-search: true
           token: ${{ secrets.GITHUB_TOKEN }}
+          file-name: ./.github/../package.json
 
       - name: Log when changed
         if: steps.check.outputs.changed == 'true'
