--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
           diff-search: true
           token: ${{ secrets.GITHUB_TOKEN }}
           file-name: ./.github/../package.json
+          file-url: https://raw.githubusercontent.com/EndBug/temp-action-test/ddbbb101b54f389ac97e25e797d4bb91721a1549/package.json
 
       - name: Log when changed
         if: steps.check.outputs.changed == 'true'
