--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           file-name: ./.github/../package.json
           file-url: https://raw.githubusercontent.com/EndBug/temp-action-test/090cff229b5272f0fe32986a6752f502d652f192/package.json
-          static-checking: localIsNew
+          static-checking: remoteIsNew
 
       - name: Log when changed
         if: steps.check.outputs.changed == 'true'
