--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on: push
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
 
     steps:
       - uses: actions/checkout@v2
@@ -15,7 +15,6 @@ jobs:
           message: "Test"
           add: "*.txt"
           remove: "*.none"
-          tag: newTag-fileAdd
           force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -25,7 +24,6 @@ jobs:
           message: "Test"
           add: "*.none"
           remove: "*.txt"
-          tag: newTag-fileRem
           force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
