--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           diff-search: true
           token: ${{ secrets.GITHUB_TOKEN }}
           file-name: ./.github/../package.json
-          file-url: https://raw.githubusercontent.com/EndBug/temp-action-test/090cff229b5272f0fe32986a6752f502d652f192/package.json
+          file-url: ::before
           static-checking: localIsNew
 
       - name: Log when changed
