--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
 
       - run: echo "123" >> file.txt
 
-      - uses: EndBug/add-and-commit@master
+      - uses: pvogt09/add-and-commit@master
         with:
           message: "Test"
           add: "*.txt"
@@ -21,12 +21,11 @@ jobs:
           force: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: EndBug/add-and-commit@master
-        with:
-          message: "Test"
-          add: "*.none"
-          remove: "*.txt"
-          force: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - uses: EndBug/add-and-commit@master
+      #   with:
+      #     message: "Test"
+      #     add: "*.none"
+      #     remove: "*.txt"
+      #     force: true
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
