test: explicit false

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           add: "*.txt"
           remove: "*.none"
           force: true
-          signoff: true
+          signoff: false
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - uses: EndBug/add-and-commit@master
