--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,12 @@ jobs:
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test1'
-          add: '*.txt'
+          add: '*.txt -f'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: EndBug/add-and-commit@ts-only
         with:
           message: 'Test2'
-          remove: '*.txt'
+          remove: '*.txt -f'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
